@@ -74,42 +74,47 @@ static const R_CallMethodDef CallEntries[] = {CALLDEF(crc64, 1),
 #name, (DL_FUNC)&name, n                                                                                       \
     }
 
-static const R_ExternalMethodDef ExtEntries[] = {EXTDEF(download, 5),
-                                                 EXTDEF(unzip, 7),
-                                                 EXTDEF(Rprof, 8),
-                                                 EXTDEF(Rprofmem, 3),
+static const R_ExternalMethodDef ExtEntries[] = {
+#ifdef Win32
+    EXTDEF(download, 6),
+#else
+    EXTDEF(download, 5),
+#endif
+    EXTDEF(unzip, 7),
+    EXTDEF(Rprof, 8),
+    EXTDEF(Rprofmem, 3),
 
-                                                 EXTDEF(countfields, 6),
-                                                 EXTDEF(readtablehead, 7),
-                                                 EXTDEF(typeconvert, 5),
-                                                 EXTDEF(writetable, 11),
+    EXTDEF(countfields, 6),
+    EXTDEF(readtablehead, 7),
+    EXTDEF(typeconvert, 5),
+    EXTDEF(writetable, 11),
 
-                                                 EXTDEF(addhistory, 1),
-                                                 EXTDEF(loadhistory, 1),
-                                                 EXTDEF(savehistory, 1),
+    EXTDEF(addhistory, 1),
+    EXTDEF(loadhistory, 1),
+    EXTDEF(savehistory, 1),
 
-                                                 EXTDEF(dataentry, 2),
-                                                 EXTDEF(dataviewer, 2),
-                                                 EXTDEF(edit, 4),
-                                                 EXTDEF(fileedit, 3),
-                                                 EXTDEF(selectlist, 4),
+    EXTDEF(dataentry, 2),
+    EXTDEF(dataviewer, 2),
+    EXTDEF(edit, 4),
+    EXTDEF(fileedit, 3),
+    EXTDEF(selectlist, 4),
 
 #ifdef Win32
-                                                 EXTDEF(winProgressBar, 6),
-                                                 EXTDEF(closeWinProgressBar, 1),
-                                                 EXTDEF(setWinProgressBar, 4),
-                                                 EXTDEF(winDialog, 2),
-                                                 EXTDEF(winDialogString, 2),
-                                                 EXTDEF(winMenuNames, 0),
-                                                 EXTDEF(winMenuItems, 1),
-                                                 EXTDEF(winMenuAdd, 3),
-                                                 EXTDEF(winMenuDel, 2),
+    EXTDEF(winProgressBar, 6),
+    EXTDEF(closeWinProgressBar, 1),
+    EXTDEF(setWinProgressBar, 4),
+    EXTDEF(winDialog, 2),
+    EXTDEF(winDialogString, 2),
+    EXTDEF(winMenuNames, 0),
+    EXTDEF(winMenuItems, 1),
+    EXTDEF(winMenuAdd, 3),
+    EXTDEF(winMenuDel, 2),
 
-                                                 EXTDEF(readRegistry, 4),
-                                                 EXTDEF(arrangeWindows, 4),
+    EXTDEF(readRegistry, 4),
+    EXTDEF(arrangeWindows, 4),
 #endif
 
-                                                 {NULL, NULL, 0}};
+    {NULL, NULL, 0}};
 
 void
 #ifdef HAVE_VISIBILITY_ATTRIBUTE
